# RemindWall

./: CLAUDE.md  PLAN.md  PLAN_ARCHIVE.md  README.md  RemindWall.xctestplan
.github/workflows/: ddcd.yml
RWPureSwift/: Package.resolved  Package.swift
RWPureSwift/Sources/AppModel/: AppState.swift
RWPureSwift/Sources/AppNavigation/: AppNavigation.swift
RWPureSwift/Sources/AppTypes/: AlbumLocalId.swift  BusWindow.swift  CalendarId.swift  ReaderState.swift  ReminderPart.swift  ScreenOffSchedule.swift  SettingConstants.swift  SlotName.swift  TagSerial.swift
RWPureSwift/Sources/CalendarAsync/: CalendarAsync.swift
RWPureSwift/Sources/CheckPermissions/: CheckPermissionsView.swift
RWPureSwift/Sources/Dao/: Schema.swift  SettingsClient.swift
RWPureSwift/Sources/Dashboard/: AlertLoader.swift  AlertLoaderView.swift  AlertView.swift  BusArrivals.swift  CalendarEvents.swift  CursorClient.swift  DashboardView.swift  NowView.swift  SlideshowView.swift  (+1 more)
RemindWall/: ContentView.swift  Info.plist  Item.swift  RemindWall.entitlements  RemindWallApp.swift
RemindWall.xcodeproj/: project.pbxproj
RemindWallUITests/: RemindWallUITests.swift  RemindWallUITestsLaunchTests.swift
RemindWalliOS/: Info.plist  RemindWalliOS.entitlements  RemindWalliOSApp.swift
RemindWalliOSUITests/: RemindWalliOSUITests.swift  RemindWalliOSUITestsLaunchTests.swift
ci_scripts/: ci_post_clone.sh
ddcd/: Cargo.toml
ddcd/src/: lib.rs  main.rs
ddcd/tests/: api.rs
scripts/kiosk/: INSTALL.md  io.hotchkiss.ddcd.plist  io.hotchkiss.remindwall-keepalive.plist  probe-display-power.sh
(+135 files in other folders)
