[package]
name = "ddcd"
version = "0.1.0"
edition = "2024"
description = "Localhost DDC brightness daemon for the RemindWall kiosk - the sandboxed Catalyst app can't touch IOKit, this can"
license = "MIT"
publish = false

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
